新規投稿機能を実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,5 +3,6 @@ ja:
     models:
       food: 料理
     attributes:
-      name: 料理名
-      comment: コメント
+      food:
+       name: 料理名
+       comment: コメント
